--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,14 @@ input:focus{
   border: none !important;
   box-shadow: none !important;
 }
+.errors{
+  padding: 12px 0;
+}
+.spanerror{
+  display: inline-block;
+  padding: 1px 5px;
+  color: #ff5d5d;
+  font-style: italic;
+  font-weight: 500;
+  text-transform: capitalize;
+}
